es-derive2-test/tests/snapshots/filtered_expansion__event_with_dotted_paths.snap
---
source: es-derive2-test/tests/filtered_expansion.rs
expression: filtered
snapshot_kind: text
---
impl ::es_core::Event for PaymentProcessed {
    const NAME: ::es_core::EventName<'static> = ::es_core::EventName::new(
        "PaymentProcessed",
    );
}
impl ::es_core::Idempotent for PaymentProcessed
where
    PaymentId: std::fmt::Display,
{
    fn get_idempotency_key(
        &self,
    ) -> Result<::es_core::IdempotencyKey, ::es_core::IdempotencyKeyError> {
        let user_parts: Vec<String> = <[_]>::into_vec(
            ::alloc::boxed::box_new([self.payment.id.to_string()]),
        );
        ::es_core::IdempotencyKey::try_new(
            ::alloc::__export::must_use({
                ::alloc::fmt::format(
                    format_args!("{0}-{1}", "PaymentProcessed", user_parts.join("-")),
                )
            }),
        )
    }
}
impl ::es_core::Correlated for PaymentProcessed
where
    UserId: std::fmt::Display,
{
    fn get_correlation_id(
        &self,
    ) -> Result<::es_core::CorrelationId, ::es_core::CorrelationIdError> {
        let user_parts: Vec<String> = <[_]>::into_vec(
            ::alloc::boxed::box_new([self.user.id.to_string()]),
        );
        ::es_core::CorrelationId::try_new(
            ::alloc::__export::must_use({
                ::alloc::fmt::format(
                    format_args!("{0}-{1}", "PaymentProcessed", user_parts.join("-")),
                )
            }),
        )
    }
    fn expected_correlation_group_status(
        &self,
    ) -> ::es_core::ExpectedCorrelationGroupStatus {
        ::es_core::ExpectedCorrelationGroupStatus::Exists
    }
}
